Fix buttons getting cutoff in some situations

--- a/src/main/frontend/src/layout/components/appointmentQueue/components/appointmentCard/_appointmentCard.scss
+++ b/src/main/frontend/src/layout/components/appointmentQueue/components/appointmentCard/_appointmentCard.scss
@@ -16,6 +16,8 @@
 		align-items: center;
 
 		juno-button {
+			--button-height: 24px;
+
 			.juno-button {
 				margin: 0 2px 0 0;
 				width: 20px;
